tambahan ryan di class logo

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <a href="#">Product</a>
       </div>
 
-      <a href="#" class="logo">Artalopa</a>
+      <a href="#" class="logo">Ryan Artalopa</a>
 
       <div class="nav-end">
         <a href="#">Home</a>
